@@ -139,6 +139,9 @@ class test_alerts(unittest.TestCase):
 		print(st.distributed_copies)
 		print(st.paused)
 		print(st.info_hash)
+		print(st.seeding_duration)
+		print(st.last_upload)
+		print(st.last_download)
 		self.assertEqual(st.save_path, os.getcwd())
 
 	def test_pop_alerts(self):
