@@ -69,14 +69,18 @@ namespace libtorrent
 		// this error code specifies what error occurred
 		error_code last_error;
 
+#ifndef TORRENT_NO_DEPRECATE
 		// returns the number of seconds to the next announce on this tracker.
 		// ``min_announce_in()`` returns the number of seconds until we are
 		// allowed to force another tracker update with this tracker.
 		//
 		// If the last time this tracker was contacted failed, ``last_error`` is
 		// the error code describing what error occurred.
+		TORRENT_DEPRECATED
 		int next_announce_in() const;
+		TORRENT_DEPRECATED
 		int min_announce_in() const;
+#endif
 
 		// the time of next tracker announce
 		time_point next_announce = min_time();
